test/errors/293-fatalerror/509.tex
% tex -interaction=nonstopmode
%% 509 => "(interwoven alignment preambles are not allowed)"

% ref: https://tex.stackexchange.com/a/28187
\halign{\valign#\cr\cr

%> (interwoven alignment preambles are not allowed)